--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>GateClient</title>
-    <base href="/" />
+    <!--<base href="/" />-->
+    <base href="/gate/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="stylesheet"
